--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
-MONGO_URL=ask
+MONGO_URI=mongodb+srv://authuser:91pDPcDe0Grzkuu6@cluster0.vu8jnyl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 TOKEN_SECRET=kja
-DOMAIN=http://localhost:300
+DOMAIN=http://localhost:3000
