--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.5.3",
     "next": "14.2.5",
     "nodemailer": "^6.9.14",
