--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb+srv://authuser:91pDPcDe0Grzkuu6@cluster0.vu8jnyl.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URI=mongodb+srv://authnext:authnext123@cluster0.cf3qg.mongodb.net/
 TOKEN_SECRET=kja
 DOMAIN=http://localhost:3000
