--- a/src/.env
+++ b/src/.env
@@ -1,3 +1,3 @@
 MONGO_URI=mongodb+srv://authnext:authnext123@cluster0.cf3qg.mongodb.net/
-TOKEN_SECRET=kja
+TOKEN_SECRET=kjagvukugiuh
 DOMAIN=http://localhost:3000
